# poly-mpm

./: .gitignore  INSTRUCTIONS  MPM.py  README  README.md  constit.py  grid.py  initialise.py  integrators.py  mplist.py  new_integrator.py  particle.py  particle_arrays.py  particles.py  plotting.py  pyproject.toml  requirements.txt  spring.py  voronoi.py
docs/: Makefile  code.rst  conf.py  tutorial.rst
docs/_build/doctrees/: code.doctree  environment.pickle  getting_started.doctree  index.doctree  tutorial.doctree
docs/_build/epub/: .buildinfo  code.html  content.opf  genindex.html  getting_started.html  index.html  poly-mpm.epub  py-modindex.html  search.html  toc.ncx  tutorial.html
docs/_build/html/: genindex.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: code.txt  getting_started.rst.txt
inputs/: PSM_slope_stab.py  anisotropy.py  anisotropy.py~  avalanche.py  avalanche.py~  ball.py  ball.py~  bi_conveyor.py  bi_dam_break.py  bi_double_insets.py  bi_drum.py  bi_seg_test.py  bi_square_drum.py  bi_vertical_chute.py  bingham_unit_test.py  brazillian.py  brazillian.py~  chuteflow.py  dam_break.py  dp_rate_unit_test.py  dp_unit_test.py  dp_unit_test.py~  flow.py  fluid.py  francois.py  grainsize.py~  gsd.py  gsd.py~  incline.py  macro.py  macro.py~  pierre.py  poly_avalanche.py  poly_seg_test.py  pouliquen_unit_test.py  seg_unit_test.py  silo.py  slope_stab.py  slope_stab.py~  stokes.py  (+9 more)
tests/: test_particles.py
